compilation error fix, refactor dependencies for manager app